Проект переработан с учетом правок Наставника.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-        <div class="auth-block">
           <div class="login"><a href="#">Вход</a></div>
-        </div>
       </div>
     </header>
 
@@ -62,8 +60,8 @@
             <figure class="gallery-content">
               <img src="img/photo-1.jpg" width="" height="" alt="VIP-зал в «Бородинском»">
             </figure>
-            <button class="btn gallery-left">Назад</button>
-            <button class="btn gallery-right">Назад</button>
+            <button class="btn gallery-prev">Назад</button>
+            <button class="btn gallery-next">Вперед</button>
           </div>
         </div>
       </div>
