--- a/shop.html
+++ b/shop.html
@@ -29,17 +29,13 @@
   </header>
 
   <main class="container">
-    <div class="annotation">
       <h1 class="main-title">Средства для ухода</h1>
-      <nav class="breadcrumbs">
-        <ul>
+        <ul class="breadcrumbs">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Магазин</a></li>
           <li><a href="#" class="disabled">Средства для ухода</a></li>
         </ul>
-      </nav>
-    </div>
-    <div class="form">
+    <div class="filter-form">
     <form action="https://echo.htmlacademy.ru" method="get">
       <fieldset>
         <legend>Производители</legend>
@@ -91,98 +87,104 @@
     </form>
   </div>
   <div class="shop-items">
-    <article class="card-item">
+
+    <article class="item-card">
       <a href="item.html">
         <img src="img/item1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
       </a>
-      <a href="item.html" class="card-item-title">Набор для путешествий <span>«Baxter of California»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          2 900 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Набор для путешествий <span>«Baxter of California»</span></a>
+        <div class="card-price">
+          <div class="price">
+            2 900 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
-    <article class="card-item">
-      <a href="#">
+
+    <article class="item-card">
+      <a href="item.html">
         <img src="img/item2.jpg" width="" height="" alt="Увлажняющий кондиционер «Baxter of California»">
       </a>
-      <a href="#" class="card-item-title">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          750 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
+        <div class="card-price">
+          <div class="price">
+            750 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
-    <article class="card-item">
-      <a href="#">
+
+    <article class="item-card">
+      <a href="item.html">
         <img src="img/item3.jpg" width="" height="" alt="Гель для волос «Suavecito»">
       </a>
-      <a href="#" class="card-item-title">Гель для волос <span>«Suavecito»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          290 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Гель для волос <span>«Suavecito»</span></a>
+        <div class="card-price">
+          <div class="price">
+            290 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
-    <article class="card-item">
-      <a href="#">
-        <img src="img/item4.jpg" width="" height="" alt="Глина для укладки волос «American crew»">
+
+    <article class="item-card">
+      <a href="item.html">
+        <img src="img/item4.jpg" width="" height="" alt="Глина для укладки волос «American Crew»">
       </a>
-      <a href="#" class="card-item-title">Глина для укладки волос <span>«American crew»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          500 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Глина для укладки волос <span>«American Crew»</span></a>
+        <div class="card-price">
+          <div class="price">
+            500 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
-    <article class="card-item"><a href="#">
+
+    <article class="item-card">
+      <a href="item.html">
         <img src="img/item5.jpg" width="" height="" alt="Гель для волос «American Crew»">
       </a>
-      <a href="#" class="card-item-title">Гель для волос <span>«American Crew»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          300 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Гель для волос <span>«American Crew»</span></a>
+        <div class="card-price">
+          <div class="price">
+            300 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
-    <article class="card-item">
-      <a href="#">
+
+    <article class="item-card">
+      <a href="item.html">
         <img src="img/item6.jpg" width="" height="" alt="Набор для бритья «Baxter of California»">
       </a>
-      <a href="#" class="card-item-title">Набор для бритья <span>«Baxter of California»</span></a>
-      <div class="card-item-basket">
-        <div class="basket-price">
-          3 900 <span>руб.</span>
-        </div>
-        <div class="basket-buy">
+      <div class="card-content">
+        <a href="item.html" class="card-title">Набор для бритья <span>«Baxter of California»</span></a>
+        <div class="card-price">
+          <div class="price">
+            3 900 <span>руб.</span>
+          </div>
           <a href="#" class="btn">Купить</a>
         </div>
       </div>
     </article>
+
   </div>
-  <div class="pager">
-    <ul>
+    <ul class="pager">
       <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
+      <li><a href="#" class="active">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
     </ul>
-  </div>
   </main>
 
   <footer class="footer">
