--- a/item.html
+++ b/item.html
@@ -28,42 +28,42 @@
     </div>
   </header>
 
-  <main>
-    <div class="annotation">
+  <main class="container">
       <h1 class="main-title">Набор для путешествий «Baxter of California»</h1>
-      <nav class="breadcrumbs">
-        <ul>
+        <ul class="breadcrumbs">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Средства для ухода</a></li>
-          <li><a href="#" class="disabled">Набор для путешествий «Baxter of California»</a></li>
+          <li>Набор для путешествий «Baxter of California»</li>
         </ul>
-      </nav>
-    </div>
     <div class="item-gallery">
-      <figure class="item-gallery-main">
-        <img src="img/item-big.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
-      </figure>
-      <figure class="item-gallery-small">
-        <img src="img/item-mall1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
-        <img src="img/item-mall2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
-        <img src="img/item-mall3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
-      </figure>
+        <a href="#">
+        <img src="img/item-big_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        </a>
+        <a href="#">
+        <img src="img/item-small_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        </a>
+        <a href="#">
+        <img src="img/item-small_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        </a>
+        <a href="#">
+        <img src="img/item-small_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        </a>
     </div>
-    <div class="item-space">
-      <div class="item-presence">Есть в наличии</div>
-      <div class="item-article">Артикул: dexter-ae</div>
-      <section class="item-description">
+    <div class="item-description">
+      <div class="item-details">
+        <div class="item-presence">Есть в наличии</div>
+        <div class="item-id">Артикул: dexter-ae</div>
+      </div>
+      <p class="item-article">
         Travel Kit – необходимый аксессуар во время любого путешествия.
         В аккуратной кожаной сумке находится все, что нужно для бритья
         и ухода за кожей во время рабочей поездки или отдыха: средство
         для умывания, увлажняющий крем, крем для бритья, крем после
         бритья, шампунь. Набор также может стать отличным подарком.
-      </section>
+      </p>
     </div>
-    <div class="item-list">
       <h2 class="main-content-title">В набор входят</h2>
-      <div class="item-list-desc">
         <ul>
           <li>Средство для умывания (50 мл)</li>
           <li>Увлажняющий крем (50 мл)</li>
@@ -71,8 +71,6 @@
           <li>Крем после бритья, шампунь (50 мл)</li>
           <li>Удобная кожаная косметичка</li>
         </ul>
-      </div>
-    </div>
   </main>
 
   <footer class="footer">
