Добавлены правки в проект по новым замечаниям Наставника.

--- a/shop.html
+++ b/shop.html
@@ -23,18 +23,18 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <div class="login"><a href="#">Вход</a></div>
+        <a class="login "href="#">Вход</a>
       </div>
     </div>
   </header>
 
   <main class="container">
-      <h1 class="main-title">Средства для ухода</h1>
-        <ul class="breadcrumbs">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#" class="disabled">Средства для ухода</a></li>
-        </ul>
+    <h1 class="main-title">Средства для ухода</h1>
+      <ul class="breadcrumbs">
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Магазин</a></li>
+        <li><a href="#" class="disabled">Средства для ухода</a></li>
+      </ul>
     <div class="filter-form">
     <form action="https://echo.htmlacademy.ru" method="get">
       <fieldset>
