--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-          <div class="login"><a href="#">Вход</a></div>
-      </div>
+        <div class="auth-block">
+          <a class="login "href="#">Вход</a>
+        </div>
     </header>
 
     <main class="container">
