--- a/item.html
+++ b/item.html
@@ -23,32 +23,34 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <div class="login"><a href="#">Вход</a></div>
+        <a class="login "href="#">Вход</a>
       </div>
     </div>
   </header>
 
   <main class="container">
-      <h1 class="main-title">Набор для путешествий «Baxter of California»</h1>
-        <ul class="breadcrumbs">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Средства для ухода</a></li>
-          <li>Набор для путешествий «Baxter of California»</li>
-        </ul>
+    <h1 class="main-title">Набор для путешествий «Baxter of California»</h1>
+      <ul class="breadcrumbs">
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Магазин</a></li>
+        <li><a href="#">Средства для ухода</a></li>
+        <li>Набор для путешествий «Baxter of California»</li>
+      </ul>
     <div class="item-gallery">
-        <a href="#">
+      <figure class="main-gallery-photo">
         <img src="img/item-big_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+      </figure>
+      <div class="small-gallery-photo">
+        <a href="#">
+          <img src="img/item-small_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-        <img src="img/item-small_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item-small_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-        <img src="img/item-small_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item-small_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
-        <a href="#">
-        <img src="img/item-small_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
-        </a>
+      </div>
     </div>
     <div class="item-description">
       <div class="item-details">
@@ -63,14 +65,14 @@
         бритья, шампунь. Набор также может стать отличным подарком.
       </p>
     </div>
-      <h2 class="main-content-title">В набор входят</h2>
-        <ul>
-          <li>Средство для умывания (50 мл)</li>
-          <li>Увлажняющий крем (50 мл)</li>
-          <li>Крем для бритья (50 мл)</li>
-          <li>Крем после бритья, шампунь (50 мл)</li>
-          <li>Удобная кожаная косметичка</li>
-        </ul>
+    <h2 class="main-content-title">В набор входят</h2>
+      <ul>
+        <li>Средство для умывания (50 мл)</li>
+        <li>Увлажняющий крем (50 мл)</li>
+        <li>Крем для бритья (50 мл)</li>
+        <li>Крем после бритья, шампунь (50 мл)</li>
+        <li>Удобная кожаная косметичка</li>
+      </ul>
   </main>
 
   <footer class="footer">
