Нарезаны картинки, добавлены в проект; добавлен стилевой файл для учебного проекта Барбершоп.

--- a/item.html
+++ b/item.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Набор для путешествий «Baxter of California»</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="/img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="page-navigation">
@@ -38,17 +39,17 @@
       </ul>
     <div class="item-gallery">
       <figure class="main-gallery-photo">
-        <img src="img/item-big_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/item_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
       </figure>
       <div class="small-gallery-photo">
         <a href="#">
-          <img src="img/item-small_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item-small_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item-small_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_4.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
         </a>
       </div>
     </div>
