--- a/price.html
+++ b/price.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <div class="login"><a href="#">Вход</a></div>
+        <a class="login" href="#">Вход</a>
       </div>
     </div>
   </header>
