--- a/shop.html
+++ b/shop.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Магазин Барбершопа "Бородинский"</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="/img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="page-navigation">
@@ -90,7 +91,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/shop-photo1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для путешествий <span>«Baxter of California»</span></a>
@@ -105,7 +106,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item2.jpg" width="" height="" alt="Увлажняющий кондиционер «Baxter of California»">
+        <img src="img/shop-photo2.jpg" width="" height="" alt="Увлажняющий кондиционер «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
@@ -120,7 +121,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item3.jpg" width="" height="" alt="Гель для волос «Suavecito»">
+        <img src="img/shop-photo3.jpg" width="" height="" alt="Гель для волос «Suavecito»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«Suavecito»</span></a>
@@ -135,7 +136,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item4.jpg" width="" height="" alt="Глина для укладки волос «American Crew»">
+        <img src="img/shop-photo4.jpg" width="" height="" alt="Глина для укладки волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Глина для укладки волос <span>«American Crew»</span></a>
@@ -150,7 +151,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item5.jpg" width="" height="" alt="Гель для волос «American Crew»">
+        <img src="img/shop-photo5.jpg" width="" height="" alt="Гель для волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«American Crew»</span></a>
@@ -165,7 +166,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/item6.jpg" width="" height="" alt="Набор для бритья «Baxter of California»">
+        <img src="img/shop-photo6.jpg" width="" height="" alt="Набор для бритья «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для бритья <span>«Baxter of California»</span></a>
