--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Барбершоп "Брординский"</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css"> 
   </head>
   <body>
     <header class="main-header">
@@ -59,7 +60,7 @@
           <h2 class="main-content-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/photo-1.jpg" width="" height="" alt="VIP-зал в «Бородинском»">
+              <img src="img/vip-hall.jpg" width="" height="" alt="VIP-зал в «Бородинском»">
             </figure>
             <button class="btn gallery-prev">Назад</button>
             <button class="btn gallery-next">Вперед</button>
