Предварительная сетка на учебный проект Барбершоп

--- a/item.html
+++ b/item.html
@@ -2,19 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Набор для путешествий «Baxter of California»</title>
+  <title>Магазин Барбершопа "Бородинский"</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class="main-header">
-    <div class="container">
+<body class="inner-page">
+  <header class="main-header-inner">
+    <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="111px" height="24px" alt="Барбершоп «Бородинский»">
         </a>
       </div>
-      <nav class="page-navigation">
+      <nav class="page-navigation-inner">
         <ul>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <a class="login "href="#">Вход</a>
+        <a class="login" href="#" >Вход</a>
       </div>
     </div>
   </header>
@@ -32,24 +32,25 @@
   <main class="container">
     <h1 class="main-title">Набор для путешествий «Baxter of California»</h1>
       <ul class="breadcrumbs">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Магазин</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="shop.html">Магазин</a></li>
         <li><a href="#">Средства для ухода</a></li>
-        <li>Набор для путешествий «Baxter of California»</li>
+        <li class="disabled">Набор для путешествий «Baxter of California»</li>
       </ul>
-    <div class="item-gallery">
+  <section class="single-item">
+    <div class="item-gallery clearfix">
       <figure class="main-gallery-photo">
-        <img src="img/item_1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/item_1.jpg" width="460px" height="500px" alt="Набор для путешествий «Baxter of California»">
       </figure>
       <div class="small-gallery-photo">
         <a href="#">
-          <img src="img/item_2.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_2.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item_3.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_3.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item_4.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_4.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
         </a>
       </div>
     </div>
@@ -58,14 +59,14 @@
         <div class="item-presence">Есть в наличии</div>
         <div class="item-id">Артикул: dexter-ae</div>
       </div>
-      <p class="item-article">
+      <p class="item-article clearfix">
         Travel Kit – необходимый аксессуар во время любого путешествия.
         В аккуратной кожаной сумке находится все, что нужно для бритья
         и ухода за кожей во время рабочей поездки или отдыха: средство
         для умывания, увлажняющий крем, крем для бритья, крем после
         бритья, шампунь. Набор также может стать отличным подарком.
       </p>
-    </div>
+
     <h2 class="main-content-title">В набор входят</h2>
       <ul>
         <li>Средство для умывания (50 мл)</li>
@@ -74,10 +75,13 @@
         <li>Крем после бритья, шампунь (50 мл)</li>
         <li>Удобная кожаная косметичка</li>
       </ul>
+  </div>
+</section>
+
   </main>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container clearfix">
       <div class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br>
