--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Барбершоп "Брординский"</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="page-navigation">
           <ul>
             <li><a href="#">Информация</a></li>
@@ -19,15 +19,15 @@
           </ul>
         </nav>
         <div class="auth-block">
-          <a class="login "href="#">Вход</a>
+          <a class="login" href="#">Вход</a>
         </div>
+      </div>
     </header>
-
     <main class="container">
       <div class="main-logo">
-        <img src="img/main-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+        <img src="img/main-logo.png" width="368px" height="204px" alt="Барбершоп «Бородинский»">
       </div>
-      <section class="promo">
+      <section class="promo clearfix">
         <div class="promo-block">
           <b class="promo-title">Быстро</b>
           <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
@@ -41,7 +41,7 @@
           <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </section>
-      <div class="main-content">
+      <div class="main-content clearfix">
         <div class="main-content-left">
           <h2 class="main-content-title">Новости</h2>
           <ul class="news-description">
@@ -67,8 +67,8 @@
           </div>
         </div>
       </div>
-      <div class="main-content">
-        <div class="main-contetn-left">
+      <div class="main-content clearfix">
+        <div class="main-content-left">
           <h2 class="main-content-title">Контактная информация</h2>
           <p>
             Барбершоп «Бородинский»<br>
@@ -98,7 +98,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container clearfix">
         <div class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br>
@@ -117,5 +117,6 @@
         </div>
       </div>
     </footer>
+
   </body>
 </html>
