--- a/shop.html
+++ b/shop.html
@@ -6,15 +6,15 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class="main-header">
-    <div class="container">
+<body class="inner-page">
+  <header class="main-header-inner">
+    <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="111px" height="24px" alt="Барбершоп «Бородинский»">
         </a>
       </div>
-      <nav class="page-navigation">
+      <nav class="page-navigation-inner">
         <ul>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
@@ -24,19 +24,19 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <a class="login "href="#">Вход</a>
+        <a class="login" href="#" >Вход</a>
       </div>
     </div>
   </header>
 
-  <main class="container">
+  <main class="container clearfix">
     <h1 class="main-title">Средства для ухода</h1>
-      <ul class="breadcrumbs">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Магазин</a></li>
-        <li><a href="#" class="disabled">Средства для ухода</a></li>
+      <ul class="breadcrumbs clearfix">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="shop.html">Магазин</a></li>
+        <li class="disabled">Средства для ухода</li>
       </ul>
-    <div class="filter-form">
+    <div class="filter-form clearfix">
     <form action="https://echo.htmlacademy.ru" method="get">
       <fieldset>
         <legend>Производители</legend>
@@ -88,7 +88,6 @@
     </form>
   </div>
   <div class="shop-items">
-
     <article class="item-card">
       <a href="item.html">
         <img src="img/shop-photo1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
@@ -178,9 +177,9 @@
         </div>
       </div>
     </article>
-
   </div>
-    <ul class="pager">
+
+    <ul class="pager clearfix">
       <li><a href="#">1</a></li>
       <li><a href="#" class="active">2</a></li>
       <li><a href="#">3</a></li>
@@ -189,7 +188,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container clearfix">
       <div class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br>
