Внесены правки в учебный проект Барберщоп, после консультации с Наставником

--- a/item.html
+++ b/item.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="inner-page">
-  <header class="main-header-inner">
+  <header class="main-header">
     <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <a class="login" href="#" >Вход</a>
+        <a class="login" href="#">Вход</a>
       </div>
     </div>
   </header>
@@ -37,8 +37,8 @@
         <li><a href="#">Средства для ухода</a></li>
         <li class="disabled">Набор для путешествий «Baxter of California»</li>
       </ul>
-  <section class="single-item">
-    <div class="item-gallery clearfix">
+  <section class="single-item clearfix">
+    <div class="item-gallery">
       <figure class="main-gallery-photo">
         <img src="img/item_1.jpg" width="460px" height="500px" alt="Набор для путешествий «Baxter of California»">
       </figure>
