--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="inner-page">
-  <header class="main-header-inner">
+  <header class="main-header">
     <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div class="auth-block">
-        <a class="login" href="#" >Вход</a>
+        <a class="login" href="#">Вход</a>
       </div>
     </div>
   </header>
@@ -36,9 +36,9 @@
         <li><a href="shop.html">Магазин</a></li>
         <li class="disabled">Средства для ухода</li>
       </ul>
-    <div class="filter-form clearfix">
+    <div class="filter-form">
     <form action="https://echo.htmlacademy.ru" method="get">
-      <fieldset>
+      <fieldset class="filter-vendor">
         <legend>Производители</legend>
         <ul>
           <li>
@@ -90,7 +90,7 @@
   <div class="shop-items">
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo1.jpg" width="" height="" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/shop-photo1.jpg" width="220px" height="165px" alt="Набор для путешествий «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для путешествий <span>«Baxter of California»</span></a>
@@ -105,7 +105,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo2.jpg" width="" height="" alt="Увлажняющий кондиционер «Baxter of California»">
+        <img src="img/shop-photo2.jpg" width="220px" height="165px" alt="Увлажняющий кондиционер «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
@@ -120,7 +120,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo3.jpg" width="" height="" alt="Гель для волос «Suavecito»">
+        <img src="img/shop-photo3.jpg" width="220px" height="165px" alt="Гель для волос «Suavecito»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«Suavecito»</span></a>
@@ -135,7 +135,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo4.jpg" width="" height="" alt="Глина для укладки волос «American Crew»">
+        <img src="img/shop-photo4.jpg" width="220px" height="165px" alt="Глина для укладки волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Глина для укладки волос <span>«American Crew»</span></a>
@@ -150,7 +150,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo5.jpg" width="" height="" alt="Гель для волос «American Crew»">
+        <img src="img/shop-photo5.jpg" width="220px" height="165px" alt="Гель для волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«American Crew»</span></a>
@@ -165,7 +165,7 @@
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo6.jpg" width="" height="" alt="Набор для бритья «Baxter of California»">
+        <img src="img/shop-photo6.jpg" width="220px" height="165px" alt="Набор для бритья «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для бритья <span>«Baxter of California»</span></a>
@@ -177,14 +177,14 @@
         </div>
       </div>
     </article>
-  </div>
 
-    <ul class="pager clearfix">
+    <ul class="pager">
       <li><a href="#">1</a></li>
       <li><a href="#" class="active">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
     </ul>
+  </div>
   </main>
 
   <footer class="footer">
