Оформлено навигационное меню, лого, бэкграунд для внутренних страниц проекта Барбершоп.

--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
     <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="img/inner-logo.png" width="111px" height="24px" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="page-navigation-inner">
