Закончена предварительная стилизация страницы shop.html учебного проекта Барбершоп.

--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
     <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="img/inner-logo.png" width="111px" height="24px" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
       <nav class="page-navigation-inner">
@@ -19,7 +19,7 @@
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Прайс-лист</a></li>
-          <li><a href="#">Магазин</a></li>
+          <li><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -40,17 +40,17 @@
   <section class="single-item clearfix">
     <div class="item-gallery">
       <figure class="main-gallery-photo">
-        <img src="img/item_1.jpg" width="460px" height="500px" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/item_1.jpg" width="460" height="500" alt="Набор для путешествий «Baxter of California»">
       </figure>
       <div class="small-gallery-photo">
         <a href="#">
-          <img src="img/item_2.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_2.jpg" width="140" height="140" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item_3.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_3.jpg" width="140" height="140" alt="Набор для путешествий «Baxter of California»">
         </a>
         <a href="#">
-          <img src="img/item_4.jpg" width="140px" height="140px" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/item_4.jpg" width="140" height="140" alt="Набор для путешествий «Baxter of California»">
         </a>
       </div>
     </div>
