--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Прайс-лист</a></li>
-          <li><a href="#">Магазин</a></li>
+          <li><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -87,93 +87,95 @@
       <button class="btn" type="submit">Показать</button>
     </form>
   </div>
+
   <div class="shop-items">
+
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo1.jpg" width="220px" height="165px" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/shop-photo1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для путешествий <span>«Baxter of California»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             2 900 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo2.jpg" width="220px" height="165px" alt="Увлажняющий кондиционер «Baxter of California»">
+        <img src="img/shop-photo2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             750 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo3.jpg" width="220px" height="165px" alt="Гель для волос «Suavecito»">
+        <img src="img/shop-photo3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«Suavecito»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             290 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo4.jpg" width="220px" height="165px" alt="Глина для укладки волос «American Crew»">
+        <img src="img/shop-photo4.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Глина для укладки волос <span>«American Crew»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             500 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo5.jpg" width="220px" height="165px" alt="Гель для волос «American Crew»">
+        <img src="img/shop-photo5.jpg" width="220" height="165" alt="Гель для волос «American Crew»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Гель для волос <span>«American Crew»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             300 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
 
     <article class="item-card">
       <a href="item.html">
-        <img src="img/shop-photo6.jpg" width="220px" height="165px" alt="Набор для бритья «Baxter of California»">
+        <img src="img/shop-photo6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
       </a>
       <div class="card-content">
         <a href="item.html" class="card-title">Набор для бритья <span>«Baxter of California»</span></a>
-        <div class="card-price">
+        <div class="card-price clearfix">
           <div class="price">
             3 900 <span>руб.</span>
           </div>
-          <a href="#" class="btn">Купить</a>
+          <a href="#" class="card-btn">Купить</a>
         </div>
       </div>
     </article>
