--- a/item.html
+++ b/item.html
@@ -40,7 +40,7 @@
   <section class="single-item clearfix">
     <div class="item-gallery">
       <figure class="main-gallery-photo">
-        <img src="img/item_1.jpg" width="460" height="500" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/item_1.jpg" width="460" height="498" alt="Набор для путешествий «Baxter of California»">
       </figure>
       <div class="small-gallery-photo">
         <a href="#">
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="item-description">
-      <div class="item-details">
+      <div class="item-details clearfix">
         <div class="item-presence">Есть в наличии</div>
         <div class="item-id">Артикул: dexter-ae</div>
       </div>
@@ -66,18 +66,24 @@
         для умывания, увлажняющий крем, крем для бритья, крем после
         бритья, шампунь. Набор также может стать отличным подарком.
       </p>
-
-    <h2 class="main-content-title">В набор входят</h2>
-      <ul>
-        <li>Средство для умывания (50 мл)</li>
-        <li>Увлажняющий крем (50 мл)</li>
-        <li>Крем для бритья (50 мл)</li>
-        <li>Крем после бритья, шампунь (50 мл)</li>
-        <li>Удобная кожаная косметичка</li>
-      </ul>
-  </div>
-</section>
-
+      <div class="card-price clearfix">
+        <div class="item-card-price">
+        <div class="price">
+          2 900 <span>руб.</span>
+        </div>
+        <a href="#" class="card-btn">Купить</a>
+        </div>
+      </div>
+      <h2 class="main-content-title">В набор входят</h2>
+        <ul class="item-list">
+          <li>Средство для умывания (50 мл)</li>
+          <li>Увлажняющий крем (50 мл)</li>
+          <li>Крем для бритья (50 мл)</li>
+          <li>Крем после бритья, шампунь (50 мл)</li>
+          <li>Удобная кожаная косметичка</li>
+        </ul>
+    </div>
+  </section>
   </main>
 
   <footer class="footer">
