--- a/price.html
+++ b/price.html
@@ -2,23 +2,24 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Прайс-лист Барбершопа "Бородинский"</title>
+  <title>Магазин Барбершопа "Бородинский"</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="inner-page">
   <header class="main-header">
-    <div class="container">
+    <div class="container clearfix">
       <div class="inner-logo">
         <a href="index.html">
-          <img src="/img/inner-logo.png" width="" height="" alt="Барбершоп «Бородинский»">
+          <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
-      <nav class="page-navigation">
+      <nav class="page-navigation-inner">
         <ul>
-          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
-          <li><a href="#">Прайс-лист</a></li>
-          <li><a href="#">Магазин</a></li>
+          <li class="active"><span>Прайс-лист</span></li>
+          <li><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -28,31 +29,79 @@
     </div>
   </header>
 
-<main class="container">
-    <h1 class="main-title">Прайс-лист</h1>
+  <main class="container">
+    <div class="inner-page-title">
+      <h1 class="main-title">Прайс-лист</h1>
       <ul class="breadcrumbs">
-        <li><a href="#">Главная</a></li>
-        <li>Прайс-лист</li>
+        <li><a href="index.html">Главная</a></li>
+        <li class="disabled">Прайс-лист</li>
       </ul>
+    </div>
+    <div class="inner-content">
+      <div class="big-heading">
+        <h2>Истинно мужская классика</h2>
+      </div>
+      <div class="inner-columns clearfix">
+      <div class="inner-column-left">
+        <h2>Мы используем только <br>лучшие средства:</h2>
+        <ul class="custom-list-1">
+          <li>Baxter of California</li>
+          <li>Mr Natty</li>
+          <li>Suavecito</li>
+          <li>Malin+Goetz</li>
+        </ul>
+      </div>
+      <div class="inner-column-right">
+        <h2>Цены на услуги <br>наших мастеров:</h2>
+        <table class="prices-table">
+          <tr>
+            <td>Стрижка</td>
+            <td>1500 р.</td>
+          </tr>
+          <tr>
+            <td>Стрижка бороды</td>
+            <td>500 р.</td>
+          </tr>
+          <tr>
+            <td>Накрутка усов</td>
+            <td>350 р.</td>
+          </tr>
+        </table>
+      </div>
+      </div>
+      <div class="inner-columns clearfix">
+        <h2>Несколько слов о нас:</h2>
+        <div class="inner-column-left">
+          <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для
+             нас — это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем
+             качество.</p>
+        </div>
+        <div class="inner-column-right">
+          <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+        </div>
+      </div>
+   </div>
 </main>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-contacts">
-        Барбершоп «Бородинский»<br>
-        Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br>
-        <a href="#">Как нас найти?</a><br>
-        Телефон: +7(495)666-02-66
-      </div>
-      <div class="footer-social">
-        <p>Давайте дружить!</p>
-        <a href="#" class="social-button social-btn-vk">VKontakte</a>
-        <a href="#" class="social-button social-btn-fb">Facebook</a>
-        <a href="#" class="social-button social-btn-inst">Instagram</a>
-      </div>
-      <div class="footer-copyright">
-        <p>Разработано:</p>
-        <a href="https://htmlacademy.ru" class="btn">HTML Academy</a>
-      </div>
+<footer class="footer">
+  <div class="container clearfix">
+    <div class="footer-contacts">
+      Барбершоп «Бородинский»<br>
+      Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br>
+      <a href="#">Как нас найти?</a><br>
+      Телефон: +7(495)666-02-66
     </div>
-  </footer>
+    <div class="footer-social">
+      <p>Давайте дружить!</p>
+      <a href="#" class="social-button social-btn-vk">VKontakte</a>
+      <a href="#" class="social-button social-btn-fb">Facebook</a>
+      <a href="#" class="social-button social-btn-inst">Instagram</a>
+    </div>
+    <div class="footer-copyright">
+      <p>Разработано:</p>
+      <a href="https://htmlacademy.ru" class="btn">HTML Academy</a>
+    </div>
+  </div>
+</footer>
+</body>
+</html>
